# Copyright © 2026 <https://github.com/technosf>
# SPDX-FileCopyrightText: © 2026 <https://github.com/technosf>
#
# SPDX-License-Identifier: GPL-3.0-or-later
#

# Listing files to compile
sources = files (
    'Events/AppEventBus.vala',
    'Coordinators/PlaybackRecoveryCoordinator.vala',
    'Coordinators/StartupCoordinator.vala',
    'Coordinators/UsageTrackingCoordinator.vala',

    'Controllers/DirectoryController.vala',
    'Controllers/PlayerController.vala',
    'Controllers/SearchController.vala',

    'Models/Countries.vala',
    'Models/Languages.vala',
    'Models/Genre.vala',
    'Models/Station.vala',
    'Models/Favicon.vala',
    'Models/StreamMetadata.vala',
    'Models/StationListBoxConfig.vala',
    'Models/StationListBoxPager.vala',

    'Providers/RadioBrowser.vala',

    'Services/DBusMediaPlayer.vala',
    'Services/DBusInterface.vala',
    'Services/DataProvider.vala',
    'Services/HttpClient.vala',
    'Services/StarStore.vala',

    'Widgets/base/PlayerInfo.vala',
    'Widgets/base/ListFlowBox.vala',
    'Widgets/base/DisplayButton.vala',
    'Widgets/base/RevealLabel.vala',
    'Widgets/base/CyclingRevealLabel.vala',
    'Widgets/base/SelectorButton.vala',
    'Widgets/base/HistoryList.vala',
    'Widgets/base/StationListBox.vala',
    'Widgets/base/StationListBoxHeader.vala',
    'Widgets/base/StationListBoxContent.vala',
    'Widgets/base/StationListItem.vala',
    'Widgets/base/StackLabel.vala',
    'Widgets/base/StationList.vala',
    'Widgets/base/TunerStatus.vala',

    'Widgets/granite/AlertView.vala',
    'Widgets/granite/CellRendererBadge.vala',
    'Widgets/granite/CellRendererExpander.vala',
    'Widgets/granite/SourceList.vala',

    'Widgets/TitleBox.vala',
    'Widgets/HeaderBar.vala',
    'Widgets/PlayButton.vala',
    'Widgets/ListButton.vala',
    'Widgets/StationButton.vala',
    'Widgets/StationContextMenu.vala',
    'Widgets/MetadataImagePopup.vala',
    'Widgets/Display.vala',
    'Widgets/Window.vala',
    'Widgets/AboutDialog.vala',
    'Widgets/CountryList.vala',
    'Widgets/PreferencesPopover.vala',

    'Settings.vala',
    'Utils.vala',
    'Application.vala',
    'Main.vala'
)
